@@ -1,3 +1,7 @@
+2019-01-05  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* Happy new year!
+
 2018-12-23  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* sample/glfwmaster_build_dylib.sh: Added.
